fix overflow issue

--- a/styles/_home_screen.scss
+++ b/styles/_home_screen.scss
@@ -43,5 +43,6 @@
 @media only screen and (max-width: 800px) and (min-width: 0px) {
   .home-container {
     grid-template-columns: 1fr 60% 1fr;
+    grid-template-rows: minmax(160px, 30%) minmax(30px, 10%) 50% 100px;
   }
 }
