--- a/styles/_pitch.scss
+++ b/styles/_pitch.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   grid-template-columns: 30% 30% 30%;
   margin-top: 3%;
+  overflow: scroll;
 }
 
 /* Pitch entry */
